fix horizontal scroll bugs

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -14,12 +14,31 @@
     border-radius: 50%;
 background: linear-gradient(90deg, rgba(131, 58, 180, 0.678) 0%, rgba(253, 29, 29, 0.651) 50%, rgba(252, 176, 69, 0.719) 100%);
 }
+.video {
+    top: 10%;
+    left: 30%;
+    position: absolute;
+    z-index: -1;
+    width: 30vw;
+    border-radius: 10px;
+    height: 50vh;
+    background-color: rgba(17, 17, 17, 0.411);
+    overflow: hidden;
+    display: none;
+}
+.video video {
+    width: 100%;
+    height: 100%;
+    opacity: .8;
+    transform: scale(1.7);
+}
 .header {
-    font-size: 7.2vw;
+    font-size: 7.4vw;
     white-space: nowrap;
     margin-left: 5%;
 }
 .header span {
+    font-size: 8vw;
     margin-left: 30%;
 }
 .links {
@@ -96,7 +115,7 @@ background: linear-gradient(90deg, rgba(131, 58, 180, 0.678) 0%, rgba(253, 29, 2
     /* padding: 100px 0; */
 }
 
-#work P {
+.work-header {
     font-size: 3em;
     padding-left: 1em;
     padding-bottom: 1em;
@@ -105,7 +124,7 @@ background: linear-gradient(90deg, rgba(131, 58, 180, 0.678) 0%, rgba(253, 29, 2
 .sticky_wrapper {
     width: 100%;
     position: sticky;
-    top: 15%;
+    top: 10%;
     overflow: hidden;
 }
 .flex_wrapper {
@@ -116,18 +135,66 @@ background: linear-gradient(90deg, rgba(131, 58, 180, 0.678) 0%, rgba(253, 29, 2
     justify-content: center;
 }
 .flex_wrapper .box:nth-child(1) {
-    margin-left: 20%;
+    margin-left: 100%;
+}
+.flex_wrapper .box:nth-child(5) {
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.flex_wrapper .box:nth-child(5) p{
+    font-size: 3em;
+    background: #fff;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    text-align: center;
+    display: grid;
+    place-items: center;
 }
 .box {
-  width: 25vw;
+  width: 35vw;
   flex-shrink: 0;
-    height: 59vh;
+    height: 70vh;
     margin-right: 3em;
-    background-color: #fff;
-    display: grid; 
-    grid-template-areas:
-    'dsc vid vid '
-    'dsc vid vid'
-    'num live live ';
+    background: linear-gradient(90deg, rgba(131, 58, 180, 0.678) 0%, rgba(253, 29, 29, 0.651) 50%, rgba(252, 176, 69, 0.719) 100%);
     /* color: #111; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: 300ms transform;
+    border: none;
+}
+.box:hover {
+    transform:  translateY(-30px);
+}
+.box-img {
+    height: 80%;
+    overflow: hidden;
+}
+.box-img video {
+    width: 100%;
+    height: 100%;
+    transform: scaleY(2);
+}
+.box-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #111;
+    padding: 1em;
+}
+.box-link p {
+    padding: 0;
+    font-size: 1.5em;
+    color: #fff;
+}
+.box-link a {
+    background: #eee;
+    border-radius: 50%;
+    padding: 6px;
+}
+.box-link a > img {
+    width: 30px;
 }
