--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -2,7 +2,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1em;
+    padding: .2em;
 }
 .hero-menu {
     display: flex;
